コンテンツを追加

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-index
+<!DOCTYPE html>
+ <html>
+  <head>
+    <meta charset="utf-8">
+     <title>sakupoyoのウェブサイト※ブックマークはここで</title>
+  <head>
+  <body>
+    sakupoyoのウェブサイト
+  </body>
+ <html>
